--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         </div>
     </div>
 
-    <div class="services">
+    <div class="services" id="services">
         <div class="container">
             <h2 class="special-heading">Services</h2>
             <p>Don't be busy, be productive</p>
@@ -123,7 +123,7 @@
         </div>
     </div>
 
-    <div class="portfolio">
+    <div class="portfolio" id="portfolio">
         <div class="container">
             <h2 class="special-heading">Portfolio</h2>
             <p>If you do it right, it will last forever.</p>
@@ -155,7 +155,7 @@
         </div>
     </div>
 
-    <div class="about">
+    <div class="about" id="about">
         <div class="container">
             <h2 class="special-heading">About</h2>
             <p>Less is more work</p>
@@ -172,7 +172,7 @@
         </div>
     </div>
 
-    <div class="contact">
+    <div class="contact" id="contac">
         <div class="container">
             <h2 class="special-heading">Contact</h2>
             <p>We are born to create</p>
