--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
         </div>
     </div>
 
-    <div class="contact" id="contac">
+    <div class="contact" id="contact">
         <div class="container">
             <h2 class="special-heading">Contact</h2>
             <p>We are born to create</p>
